# pollen

./: .gitignore  README.md  event_loop.h  example.c  meson.build  meson.options  pollen.h  test.c
tests/: 00_basic_fd.c  01_invalid_signal.c  02_preserve_sigmask.c  03_idle_callback.c  04_idle_priority.c  05_closure.c  06_signal.c  07_timer.c  08_more_signals.c  09_eventfd.c  meson.build
